add get and getById in order openAPI doc
